syntax = "proto3";

option go_package = "gamelink-go/protoMsg";

package protoMsg;

message OneCriteriaStruct {
    enum Criteria {
       undef        = 0;
       id           = 1;
       vk_id        = 2;
       fb_id        = 3;
       sex          = 4;
       age          = 5;
       created_at   = 6;
       deleted      = 7;
    }
    enum Option {
        x = 0;
        l = 1;
        e = 2;
        g = 3;

    }
    Criteria cr    = 1;
    Option   op    = 2;
    string   value = 3;
}

message OneCriteriaRequest {
    OneCriteriaStruct param = 1;
}

message MultiCriteriaRequest {
    repeated OneCriteriaStruct params = 1;
}

message UserResponseStruct {
    enum Sex {
        undef = 0;
        male  = 1;
        female= 2;
    }
    int64  id         = 1;
    string vk_id      = 2;
    string fb_id      = 3;
    string name       = 4;
    Sex    sex        = 5;
    int64  age        = 6;
    int64  created_at = 7;
    int32  deleted    = 8;
}

message OneUserResponse {
    UserResponseStruct user = 1;
}

message MultiUserResponse {
    repeated UserResponseStruct users = 1;
}

message CountResponse {
    int64 count = 1;
}